--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -56,8 +56,8 @@ jobs:
         # versions like 4.0.0-rc.0 *after* 4.0.0.
         run: |
           echo "most_recent_tag=$(git tag --sort=taggerdate | tail -1)" >> $GITHUB_ENV
-          echo "latest_tag=$(git tag | tr - \~ | sort -V | tr \~ - | tail -1)" >> $GITHUB_ENV
-          echo "second_latest_tag=$(git tag | tr - \~ | sort -V | tr \~ - | tail -2 | sed -n 1p)" >> $GITHUB_ENV
+          echo "latest_tag=$(git tag | tr - \~ | sort --version-sort | tr \~ - | tail -1)" >> $GITHUB_ENV
+          echo "second_latest_tag=$(git tag | tr - \~ | sort --version-sort | tr \~ - | tail -2 | sed -n 1p)" >> $GITHUB_ENV
       - name: Install semver
         run: |
           wget -O /usr/local/bin/semver https://raw.githubusercontent.com/fsaintjacques/semver-tool/master/src/semver
