--- a/.goreleaser-patch.yml
+++ b/.goreleaser-patch.yml
@@ -1,7 +1,8 @@
-# This is the main configuration for goreleaser, which builds and publishes a new patch
-# release for an older version of src-cli. It publishes a new versioned formula in the
-# Homebrew tap. It should match .gorelease.yml in every way except for the brews.name
-# template.
+# This is the patch release configuration for goreleaser, which builds and publishes a new
+# patch release for an older version of src-cli. It publishes a new versioned formula in
+# the Homebrew tap and does not publish a "latest" image to Docker Hub. It should match
+# .goreleaser.yml in every way except for the brews.name template and the
+# dockers.image_templates list.
 dist: release
 env:
   - GO111MODULE=on
@@ -54,7 +55,6 @@ dockers:
     - "sourcegraph/src-cli:{{ .Tag }}"
     - "sourcegraph/src-cli:{{ .Major }}"
     - "sourcegraph/src-cli:{{ .Major }}.{{ .Minor }}"
-    - "sourcegraph/src-cli:latest"
 changelog:
   sort: asc
   filters:
