chore(vscode): add cody.codebase setting to use with Cody extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "go.useLanguageServer": true,
   "gopls": {
     "local": "github.com/sourcegraph/src-cli"
-  }
+  },
+  "cody.codebase": "github.com/sourcegraph/src-cli",
 }
