--- a/.github/workflows/goreleaser-check.yml
+++ b/.github/workflows/goreleaser-check.yml
@@ -1,7 +1,8 @@
 name: GoReleaser check
 
 on:
-  - push
+  push:
+  workflow_dispatch:
 
 jobs:
   goreleaser:
@@ -15,9 +16,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version: 1.20
       - name: Check GoReleaser config
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
           args: check
