--- a/docker/batch-change-volume-workspace/Dockerfile
+++ b/docker/batch-change-volume-workspace/Dockerfile
@@ -4,4 +4,4 @@
 
 FROM alpine:3.15.0@sha256:21a3deaa0d32a8057914f36584b5288d2e5ecc984380bc0118285c70fa8c9300
 
-RUN apk add --update git unzip
+RUN apk add --update git libarchive-tools
