Turn off race detection for upload test (#1082)
This patch can be reverted after the upstream testify library
fixes the code which causes a race condition when mocking.

I couldn't quite figure out how to run the single test without race detection while
running others with race detection, so I've temporarily added two test commands
in the go-ci.yml file.

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -17,4 +17,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
-      - run: go test -race -v ./...
+      - run: |
+          go test -race -v ./...
+          go test -v ./...
