--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ before:
   hooks:
     - go mod download
     - go mod tidy
-    - go generate ./schema
+    - go generate ./...
 builds:
 -
   main: ./cmd/src/
