--- a/.goreleaser-patch.yml
+++ b/.goreleaser-patch.yml
@@ -11,7 +11,7 @@ before:
   hooks:
     - go mod download
     - go mod tidy
-    - go generate ./schema
+    - go generate ./...
 builds:
 -
   main: ./cmd/src/
