Fix windows installation
Fixes #1050. Previously, it was not possible to install src-cli via npm
on Windows. It was also not possible to publish the npm package on
Windows. This PR fixes both problems. The second problem had to be
solved so I could manually test the fix for this PR.:

--- a/npm-distribution/package.json
+++ b/npm-distribution/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "install": "node install.js",
-    "prepack": "cp ../LICENSE . && cp ../README.md ."
+    "prepack": "node copy-files.js"
   },
   "main": "src.js",
   "bin": {
