--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -2,6 +2,9 @@ name: Go Lint
 
 on:
   - push
+env:
+  GOPRIVATE: "github.com/sourcegraph/*"
+  PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
 
 jobs:
   go-lint:
