--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -1,6 +1,9 @@
 name: SCIP
 'on':
   - push
+env:
+  GOPRIVATE: "github.com/sourcegraph/*"
+  PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
 jobs:
   scip-go:
     runs-on: ubuntu-latest
