add workflow_dispatch to actions to be able to test actions

--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -1,7 +1,8 @@
 name: Go Lint
 
 on:
-  - push
+  workflow_dispatch:
+  push:
 env:
   GOPRIVATE: "github.com/sourcegraph/*"
   PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
