--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,7 @@ name: Publish Docker image dependencies
 # We only want to build on releases; this condition is 100% stolen from the
 # goreleaser action.
 on:
+  workflow_dispatch:
   push:
     tags:
       - "*"
