--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,7 +1,8 @@
 name: Go CI
 
 on:
-  - push
+  workflow_dispatch:
+  push:
 env:
   GOPRIVATE: "github.com/sourcegraph/*"
   PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
