update github actions to be able to access private sg/sg (#1112)
* update github actions to be able to access private sg/sg

* add workflow_dispatch to actions to be able to test actions

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,9 +1,13 @@
 name: Build and Release
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - '*'
+env:
+  GOPRIVATE: "github.com/sourcegraph/*"
+  PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
 
 # There are two cases where this GitHub action will run:
 #
