add required github config (#1113)
* add required github config

* set no username in git cfg

* use different syntax on windows

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -21,6 +21,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+      - name: (Windows) Enable pulling Go modules from private sourcegraph/sourcegraph
+        if: runner.os == 'Windows'
+        run: git config --global url."https://$env:PRIVATE_TOKEN@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
+      - name: (Default) Enable pulling Go modules from private sourcegraph/sourcegraph
+        if: runner.os != 'Windows'
+        run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
       - run: |
           go test -race -v ./...
           go test -v ./...
