Add tests for a UNIX Domain Socket.

--- a/internal/api/BUILD.bazel
+++ b/internal/api/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "gzip.go",
         "nullable.go",
         "proxy.go",
+        "test_unix_socket_server.go",
     ],
     importpath = "github.com/sourcegraph/src-cli/internal/api",
     visibility = ["//:__subpackages__"],
