Add proxy support (#1120)
* - Read proxy env variables and config settings
- Define a function to test that a given path is an active UDS

* Expand paths to the OS user's home directory if they start with "~/" or "%USERPROFILE%\".

* Switch from using "os/user" and `user.Current()` for finding the OS user's home dir, to using "os" and `os.UserHomeDir()`. It requires Go 1.12+.

* Use the UNIX Domain Socket when making connections

* Add SRC_PROXY_SOCKET to the usage output, and remove config settings for a proxy URL.

* Document expandHomeDir function

* Add support for HTTP(S) and SOCKS5 proxies

* Mollify tests

* Add tests

* Refactor: move the proxy handling to a separate file.

* Add tests for a UNIX Domain Socket.

* Fix analysis of url schemes

* Ad tests for socks proxies in the config

* SOCKS proxies work OOTB, so remove the manual dialing for them.

* Use `tls.HandshakeContext`

* - add a proxy test script
- remove "endpoint" from all of the proxy names. The environment variable is now "SRC_PROXY"
- clean up the http(s) proxy dialing code. Experiemented with using http.Request instead of spelling out the CONNECT request manually, but it had enough quircks that I went back to spelling it out manually.
- Add more desriptive messages to the socket config test.

* fix  socket test by shortening the length of the file path - UNIX socket paths need to be less than 108-ish characters.

* Fix parameter capitalization

* Add comment about th UDS path length to main_test.go

* Fix formatting in usage message

* Whoops; meant to use `w` instead of `v`! Thanks for catching that.

Co-authored-by: Camden Cheek <camden@ccheek.com>

* Whoops; meant to use `w` instead of `v`! Thanks for catching that.

Co-authored-by: Camden Cheek <camden@ccheek.com>

* Update comment about InsecureSkipVerify

* Make CHANGELOG entry

---------

Co-authored-by: Camden Cheek <camden@ccheek.com>

--- a/internal/api/BUILD.bazel
+++ b/internal/api/BUILD.bazel
@@ -8,6 +8,8 @@ go_library(
         "flags.go",
         "gzip.go",
         "nullable.go",
+        "proxy.go",
+        "test_unix_socket_server.go",
     ],
     importpath = "github.com/sourcegraph/src-cli/internal/api",
     visibility = ["//:__subpackages__"],
