--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -11,9 +11,8 @@ jobs:
     container: sourcegraph/scip-go
     steps:
       - uses: actions/checkout@v4
-      - name: Get src-cli
-        run: curl -L https://sourcegraph.com/.api/src-cli/src_linux_amd64 -o /usr/local/bin/src;
-          chmod +x /usr/local/bin/src
+      - name: Build src-cli
+        run: go build -o /usr/local/bin/src ./cmd/src
       - name: Set directory to safe for git
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
       - name: Enable pulling Go modules from private sourcegraph/sourcegraph
