--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -11,24 +11,46 @@ jobs:
     container: sourcegraph/scip-go
     steps:
       - uses: actions/checkout@v4
-      - name: Get src-cli
-        run: curl -L https://sourcegraph.com/.api/src-cli/src_linux_amd64 -o /usr/local/bin/src;
-          chmod +x /usr/local/bin/src
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.23.2
+
       - name: Set directory to safe for git
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
+      - name: Build src-cli
+        run: go build -o ./src-cli ./cmd/src
+
       - name: Enable pulling Go modules from private sourcegraph/sourcegraph
         run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
+
       - name: Generate SCIP data
         run: scip-go
 
       - name: Upload SCIP to Cloud
-        run: src code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
+        run: ./src-cli code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
         env:
           SRC_ENDPOINT: https://sourcegraph.com/
           SRC_ACCESS_TOKEN: ${{ secrets.SRC_ACCESS_TOKEN_DOTCOM }}
 
       - name: Upload SCIP to S2
-        run: src code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
+        run: ./src-cli code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
+        env:
+          SRC_ENDPOINT: https://sourcegraph.sourcegraph.com/
+          SRC_ACCESS_TOKEN: ${{ secrets.SRC_ACCESS_TOKEN_S2 }}
+
+      - name: Compress SCIP file
+        run: gzip index.scip
+
+      - name: Upload compressed SCIP to Cloud
+        run: ./src-cli code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
+        env:
+          SRC_ENDPOINT: https://sourcegraph.com/
+          SRC_ACCESS_TOKEN: ${{ secrets.SRC_ACCESS_TOKEN_DOTCOM }}
+
+      - name: Upload compressed SCIP to S2
+        run: ./src-cli code-intel upload -github-token='${{ secrets.GITHUB_TOKEN }}' -no-progress
         env:
           SRC_ENDPOINT: https://sourcegraph.sourcegraph.com/
           SRC_ACCESS_TOKEN: ${{ secrets.SRC_ACCESS_TOKEN_S2 }}
