--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -124,7 +124,7 @@ jobs:
         with:
           repository: sourcegraph/homebrew-src-cli
           fetch-depth: 0
-          token: ${{ secrets.BOT_CROSS_REPO_PAT }}
+          token: ${{ secrets.BOT_GITHUB_TOKEN }}
       - name: Copy main release formula file to versioned formula file
         run: cp Formula/src-cli.rb ${{ env.versioned_formula_file }}
       # Homebrew expects the name of the class in a versioned formula file to be of the
@@ -202,7 +202,7 @@ jobs:
           args: release --clean --config=${{ env.config_file }}
         env:
           # Use separate access token, because we need a scope:repo token to publish the brew formula.
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
 
   # goreleaser_post updates the symlink name to refer to the new release version. The
   # symlink enables users to install the latest src-cli with the versioned command:
