--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -30,3 +30,18 @@ jobs:
       - run: |
           go test -race -v ./...
           go test -v ./...
+
+  # This job provides a stable name for branch protection rules
+  # It will only pass if all Go CI matrix tests above pass
+  go-test-complete:
+    runs-on: ubuntu-latest
+    needs: go-test
+    if: always()
+    steps:
+      - name: Check Go CI matrix job results
+        run: |
+          if [[ "${{ needs.go-test.result }}" != "success" ]]; then
+            echo "One or more Go CI tests failed"
+            exit 1
+          fi
+          echo "All Go CI tests passed"
