fix: go linting issues (#1194)
* remove deprecated build tags

* fix error string formatting

* remove embedded field selectors

* convert if-else chains to tagged switches

* use fmt.Fprintf instead of Write with Sprintf

* remove duplicate import

* apply de morgan's law

* fix compilation errors

* remove more embedded field selectors

* remove final embedded field selectors

* Revert "apply de morgan's law"

This reverts commit d76cb21c54ccf1242b4a057e89f847fe7896960c.

* ignore qf1001 and st1003 lint rules

* add comments for disabled lint rules

* Revert "remove final embedded field selectors"

This reverts commit 0a1407c36e57b48d95d6254979096273a3ddb295.

* Revert "remove more embedded field selectors"

This reverts commit 64642ad1c96fb3d6309f91b10bafcced0ba911bd.

* Revert "remove embedded field selectors"

This reverts commit 563205a0bf7d417c04a597f305b1b740cd17bcc0.

* disable qf1008 embedded field lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,6 +41,12 @@ linters:
     govet:
       disable:
         - composites
+    staticcheck:
+      checks:
+        - all
+        - -QF1001 # De Morgan's law simplifications
+        - -QF1008 # Embedded field selector simplifications
+        - -ST1003 # Naming conventions (ID vs Id, URL vs Url, etc.)
   exclusions:
     generated: lax
     presets:
