chore(ci): always use go version in .tool-versions
setup-go@v6 supports reading in .tool-versions which means we will now
always run the same version we run in local dev. This is also a better
version to use than go.mod since that is a minimum version.

Test Plan: CI

--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
-          go-version: 1.25
+          go-version-file: '.tool-versions'
 
       - name: Set directory to safe for git
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
