--- a/.github/workflows/pr-auditor.yml
+++ b/.github/workflows/pr-auditor.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           repository: 'sourcegraph/devx-service'
           token: ${{ secrets.PR_AUDITOR_TOKEN }}
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
         with: { go-version-file: '.tool-versions' }
 
       - run: 'go run ./cmd/pr-auditor'
