chore(ci): always use go version in .tool-versions (#1198)
setup-go@v6 supports reading in .tool-versions which means we will now
always run the same version we run in local dev. This is also a better
version to use than go.mod since that is a minimum version.

Note: they have not tagged a release for this support, but we want to use
it. So for now we pin to the latest commit which supports it. Once there is
a tagged release I will update the workflow files.

Test Plan: CI

--- a/.github/workflows/goreleaser-check.yml
+++ b/.github/workflows/goreleaser-check.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
         with:
-          go-version: '1.25'
+          go-version-file: '.tool-versions'
       - name: Enable pulling Go modules from private sourcegraph/sourcegraph
         run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
       - name: Check GoReleaser config
