--- a/.github/workflows/pr-auditor.yml
+++ b/.github/workflows/pr-auditor.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           repository: 'sourcegraph/devx-service'
           token: ${{ secrets.PR_AUDITOR_TOKEN }}
-      - uses: actions/setup-go@v5
-        with: { go-version: '1.23' }
+      - uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
+        with: { go-version-file: '.tool-versions' }
 
       - run: 'go run ./cmd/pr-auditor'
         env:
