--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Go
-        uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
+        uses: actions/setup-go@v6.1.0
         with:
           go-version-file: '.tool-versions'
       - name: (Windows) Enable pulling Go modules from private sourcegraph/sourcegraph
