--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
-        uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
+        uses: actions/setup-go@v6.1.0
         with:
           go-version-file: '.tool-versions'
 
