--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v6.1.0
+      - name: Set up mise
+        uses: jdx/mise-action@v2
         with:
-          go-version-file: '.tool-versions'
+          cache: true
       - name: Enable pulling Go modules from private sourcegraph/sourcegraph
         run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
       - run: ./dev/go-lint.sh
