--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -16,10 +16,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up mise
-        uses: jdx/mise-action@v2
+      - name: Get Go version from mise
+        id: mise
+        run: echo "go-version=$(grep 'golang' mise.toml | cut -d'"' -f2)" >> $GITHUB_OUTPUT
+        shell: bash
+      - name: Set up Go
+        uses: actions/setup-go@v6
         with:
-          cache: true
+          go-version: ${{ steps.mise.outputs.go-version }}
       - name: (Windows) Enable pulling Go modules from private sourcegraph/sourcegraph
         if: runner.os == 'Windows'
         run: git config --global url."https://$env:PRIVATE_TOKEN@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
