--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -15,18 +15,16 @@ jobs:
         id: mise
         run: echo "go-version=$(grep 'golang' mise.toml | cut -d'"' -f2)" >> $GITHUB_OUTPUT
       - name: Set up Go
-        uses: actions/setup-go@v6
+        uses: sourcegraph/actions/go-setup@main
         with:
           go-version: ${{ steps.mise.outputs.go-version }}
+          private-token: ${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}
 
       - name: Set directory to safe for git
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
       - name: Build src-cli
         run: go build -o ./src-cli ./cmd/src
-
-      - name: Enable pulling Go modules from private sourcegraph/sourcegraph
-        run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
 
       - name: Generate SCIP data
         run: scip-go
